monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0112/A0112.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A0112;

grammar A0112 {

  Foo = "foo";

  Bar = "bar";

  Bar = "foo";

}
